courses/430_programming-languages/assignment-6/tests/error/hw5_error14.nex
var i : int;

fun f(a:int, b:bool) : none {}

print "should not get here:n";
1 / 0;

f(1, 2);

